# resumeai

./: .env.example  .gitignore  LICENSE  docker-compose.yml  resume_gpt_codex_notes_v2.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260606_0001_initial_resume_mvp.py  20260607_0002_add_resume_draft_status.py  20260607_0003_add_resume_document.py  20260614_0004_add_user_profiles_and_positions.py
backend/app/: main.py
backend/app/api/positions/: router.py
backend/app/api/resume/: router.py
backend/app/api/users/: router.py
backend/app/core/: config.py
backend/app/models/: __init__.py  position.py  prompt_run.py  resume.py  user_profile.py
backend/app/schemas/: position.py  resume.py  user_profile.py
backend/app/services/: dialogue_answer_service.py  experience_service.py  job_service.py  llm_service.py  optimization_service.py  position_service.py  productized_draft_service.py  prompt_service.py  readiness_service.py  resume_block_service.py  resume_import_service.py  resume_section_update_service.py  resume_service.py  review_service.py  user_profile_service.py
backend/scripts/: run_resume_cases.py
docs/: 2026-06-02-面试模拟系统需求分析会议纪要(1).md  产品化简历模板设计.md  对话式简历教练实施计划.md  对话式简历教练设计.md  简历助手智能体MVP开发拆解.md  简历助手智能体PRD.md  简历助手智能体架构设计.md  简历助手测试输入用例.md  简历模块化与整体分析分离设计.md  简历资料模型设计.md  询问逻辑优化执行文档.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: main.tsx
prompts/resume/: analyze_job.v1.md  analyze_resume_blocks.v1.md  diagnose_resume_gap.v1.md  (+13 more)
(+4 files in other folders)
